# autotools_test2

./: Makefile.in  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile.in
src/lcd/: Makefile.in
src/media/: Makefile.in
src/usb/: Makefile.in
